workshop3/appv2-deployment.yml
apiVersion: extensions/v1beta1

kind: Deployment

metadata:
  name: appv2-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: myapp
        version: v2
    spec:
      containers:
      - name: myapp-container
        image: stackupiss/northwind-app:v2
        resources:
          requests:
            memory: "55M"
            cpu: "20m"
        ports:
        - containerPort: 3000
          name: myapp-port        
        imagePullPolicy: Always
      restartPolicy: Always
