workshop3/db-deployment.yml
apiVersion: extensions/v1beta1

kind: Deployment

metadata:
  name: db-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: mysqldb
    spec:
      volumes: 
      - name: mysqldb-volume
        persistentVolumeClaim:
            claimName: mysqldb-pvc
      containers:
      - name: mysqldbcont
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysqldb-volume
        image: stackupiss/northwind-db:v1
        resources:
          requests:
            memory: "55M"
            cpu: "20m"
        ports:
        - containerPort: 3306
          name: mysqldb-port        
        imagePullPolicy: Always
      restartPolicy: Always
