workshop3/appv1-svc.yml
kind: Service

apiVersion: v1

metadata:
  name: myappv1-svc

spec:
  selector:
    name: myapp
    version: v1
  type: ClusterIP
  ports:
  - name: myappv1-port
    port: 80
    targetPort: 3000
