workshop3/db-svc.yml
kind: Service

apiVersion: v1

metadata:
  name: mydb-svc

spec:
  selector:
    name: mysqldb
  
  type: ClusterIP
  ports:
  - name: mysqldb-svc-port
    port: 3306
    targetPort: 3306
